desitarget local tuto updated...

--- a/run_desitarget_local.ipynb
+++ b/run_desitarget_local.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,23 @@
     "\n",
     "In this notebook I'm going to describe how to run a local copy of `DESITARGET`. First of all, we need to Synch our local DESITARGET with the upstream repository (AKA DESITARGET) to keep it up-to-date. To do so we ran:\n",
     "\n",
+    "    git remote add upstream https://github.com/desihub/desitarget.git\n",
+    "    git remote -v\n",
     "    git fetch upstream\n",
     "    git checkout master\n",
     "    git merge upstream/master\n",
     "    \n",
     "or follow: https://help.github.com/en/articles/syncing-a-fork\n",
     "\n",
-    "Then, it's mandatory to create a new branch to work in based on updated master branch.\n",
+    "Then, I recommend to create a new branch to work on based on updated master branch.\n",
+    "\n",
+    "    git checkout -b [name_of_your_new_branch]\n",
     "\n",
     "Info :https://github.com/Kunena/Kunena-Forum/wiki/Create-a-new-branch-with-git-and-manage-branches\n",
     "\n",
     "Once we have modified the files, add the changes commit and push:\n",
     "\n",
+    "    git status\n",
     "    git add file\n",
     "    git commit -m \"comment here\"\n",
     "    git push origin NAME_OF_CURRENT_BRANCH\n",
@@ -57,58 +62,69 @@
     "    python bin/select_targets $LSDIR/sweep/$DR/ $TARGDIR/targets-dr$DR-$VERSION.fits \n",
     "            --tcnames BGS --radecbox 160,230,-2,18\n",
     "\n",
-    "A bash example is available here: global/homes/q/qmxp55/DESI/desitarget/run.sh"
+    "A bash example is available below (and here:global/homes/q/qmxp55/DESI/desitarget/run.sh)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUNNING: source /project/projectdirs/desi/software/desi_environment.sh 18.7\n",
-      "2\n",
-      "RUNNING: export PATH=$PATH:/global/homes/q/qmxp55/DESI/desitarget/bin\n",
-      "0\n",
-      "RUNNING: export PYTHONPATH=$PYTHONPATH:/global/homes/q/qmxp55/DESI/desitarget/py\n",
-      "0\n",
-      "RUNNING: python /global/homes/q/qmxp55/DESI/desitarget/bin/select_targets /global/project/projectdirs/cosmo/data/legacysurvey/dr8/south/sweep/8.0/ /global/homes/q/qmxp55/DESI/desitarget_data/targetdir/targets-dr8.0-160_162_2_3.fits --tcnames BGS --radecbox 160,162,2,3\n",
-      "0\n"
+      "INFO:select_targets:93:<module>: running on 32 processors\n",
+      "INFO:cuts.py:2205:select_targets: Running on the main survey\n",
+      "INFO:cuts.py:2230:select_targets: Run targets in box bounded by [RAmin, RAmax, Decmin, Decmax]=[170.0, 172.0, 2.0, 4.0]\n",
+      "INFO:cuts.py:2280:select_targets: Processing files in (nside=32, pixel numbers=[6768 6769 6771 6772 6773 6774 6747 6750]) HEALPixels\n",
+      "INFO:select_targets:128:<module>: 6382 targets written to /global/homes/q/qmxp55/DESI/desitarget_data/targetdir/targets-dr8.0-TEST.fits...t=121.2s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "desimodules/18.3(83):ERROR:105: Unable to locate a modulefile for 'desiconda/20180130-1.2.4-spec'\n",
+      "desimodules/18.3(87):ERROR:105: Unable to locate a modulefile for 'desiutil/1.9.10'\n",
+      "desimodules/18.3(90):ERROR:105: Unable to locate a modulefile for 'desitree/0.3.0'\n",
+      "desimodules/18.3(93):ERROR:105: Unable to locate a modulefile for 'specter/0.8.4'\n",
+      "desimodules/18.3(94):ERROR:105: Unable to locate a modulefile for 'desimodel/0.9.4'\n",
+      "desimodules/18.3(95):ERROR:105: Unable to locate a modulefile for 'specex/0.6.1'\n",
+      "desimodules/18.3(96):ERROR:105: Unable to locate a modulefile for 'desitarget/0.20.1'\n",
+      "desimodules/18.3(97):ERROR:105: Unable to locate a modulefile for 'specsim/v0.11'\n",
+      "desimodules/18.3(98):ERROR:105: Unable to locate a modulefile for 'desispec/0.20.0'\n",
+      "desimodules/18.3(99):ERROR:105: Unable to locate a modulefile for 'desisim/0.27.0'\n",
+      "desimodules/18.3(100):ERROR:105: Unable to locate a modulefile for 'fiberassign/0.8.0'\n",
+      "desimodules/18.3(101):ERROR:105: Unable to locate a modulefile for 'desisurvey/0.10.1'\n",
+      "desimodules/18.3(102):ERROR:105: Unable to locate a modulefile for 'surveysim/0.9.0'\n",
+      "desimodules/18.3(103):ERROR:105: Unable to locate a modulefile for 'redrock/0.10.1'\n",
+      "desimodules/18.3(104):ERROR:105: Unable to locate a modulefile for 'redrock-templates/0.5'\n",
+      "desimodules/18.3(105):ERROR:105: Unable to locate a modulefile for 'simqso/1.2.2'\n"
      ]
     }
    ],
    "source": [
-    "#Run desitarget from python -- Doesn't work!\n",
-    "box = [160, 162, 2, 3]\n",
+    "%%bash\n",
+    "module unload desimodules\n",
+    "source /project/projectdirs/desi/software/desi_environment.sh 18.7\n",
+    "export PATH=$PATH:/global/homes/q/qmxp55/DESI/desitarget/bin\n",
+    "export PYTHONPATH=$PYTHONPATH:/global/homes/q/qmxp55/DESI/desitarget/py\n",
     "\n",
-    "desitarget_path = '/global/homes/q/qmxp55/DESI/desitarget'\n",
-    "sweeps='/global/project/projectdirs/cosmo/data/legacysurvey/dr8/south'\n",
-    "targetsDir = '/global/homes/q/qmxp55/DESI/desitarget_data/targetdir'\n",
+    "export BIN='/global/homes/q/qmxp55/DESI/desitarget/bin'\n",
+    "export LSDIR='/global/project/projectdirs/cosmo/data/legacysurvey/dr8/south'\n",
+    "export TARGDIR='/global/homes/q/qmxp55/DESI/desitarget_data/targetdir'\n",
+    "export WEBDIR='/global/homes/q/qmxp55/DESI/desitarget_data/WEB'\n",
+    "export DR='8.0'\n",
+    "export VERSION='TEST'\n",
+    "#export RANDOMDIR='/project/projectdirs/desi/target/catalogs/dr7.1/0.22.0/'\n",
+    "export PIXWDIR='/project/projectdirs/desi/target/catalogs/dr8/0.31.1/pixweight'\n",
     "\n",
-    "DR='8.0'\n",
-    "\n",
-    "labw = []\n",
-    "for i in box:\n",
-    "    labw.append(str(i))\n",
-    "    \n",
-    "targetFile = 'targets-dr%s-%s' %(DR, '_'.join(labw))\n",
-    "\n",
-    "#cmd0 = 'source /project/projectdirs/desi/software/desi_environment.sh 18.7'\n",
-    "cmd1 = 'export PATH=$PATH:%s/bin' %(desitarget_path)\n",
-    "cmd2 = 'export PYTHONPATH=$PYTHONPATH:%s/py' %(desitarget_path)\n",
-    "cmd3 = 'python %s/bin/select_targets %s/sweep/%s/ %s/%s.fits --tcnames BGS --radecbox %s' %(desitarget_path, sweeps, DR, targetsDir, targetFile, ','.join(labw))\n",
-    "\n",
-    "cmd = [cmd1, cmd2, cmd3]\n",
-    "\n",
-    "for i in cmd:\n",
-    "    \n",
-    "    print('RUNNING: '+i)\n",
-    "    err = subprocess.call(i.split(), shell=True)\n",
-    "    print(err)\n",
-    "    assert err == 0\n"
+    "#python bin/select_sv_targets $LSDIR/sweep/$DR $TARGDIR/targets-sv-dr$DR-$VERSION.fits\n",
+    "python $BIN/select_targets $LSDIR/sweep/$DR/ $TARGDIR/targets-dr$DR-$VERSION.fits --tcnames BGS --radecbox 170,172,2,4\n",
+    "#python bin/make_imaging_weight_map $RANDOMDIR/randoms-dr7.1-0.22.0.fits $TARGDIR/targets-dr$DR-$VERSION.fits $TARGDIR/pixweight-dr$DR-$VERSION.fits\n",
+    "#python bin/run_target_qa $TARGDIR/targets-dr$DR-$VERSION.fits $WEBDIR/desitargetQA-dr$DR-$VERSION -w $PIXWDIR/pixweight-dr8-0.31.1.fits --tcnames BGS\n",
+    "#python bin/run_target_qa $TARGDIR/targets-dr$DR-$VERSION.fits $WEBDIR/desitargetQA-dr$DR-$VERSION --nosystematics"
    ]
   },
   {
@@ -320,6 +336,64 @@
     "rmag_fibmag_density(targets[bgs], 'BGS', otherCat=False, MASK=None, Cpar=None, \n",
     "                    CparName=None, log=True, fmc=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEV ZONE..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUNNING: source /project/projectdirs/desi/software/desi_environment.sh 18.7\n",
+      "2\n",
+      "RUNNING: export PATH=$PATH:/global/homes/q/qmxp55/DESI/desitarget/bin\n",
+      "0\n",
+      "RUNNING: export PYTHONPATH=$PYTHONPATH:/global/homes/q/qmxp55/DESI/desitarget/py\n",
+      "0\n",
+      "RUNNING: python /global/homes/q/qmxp55/DESI/desitarget/bin/select_targets /global/project/projectdirs/cosmo/data/legacysurvey/dr8/south/sweep/8.0/ /global/homes/q/qmxp55/DESI/desitarget_data/targetdir/targets-dr8.0-160_162_2_3.fits --tcnames BGS --radecbox 160,162,2,3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Run desitarget from python -- Doesn't work!\n",
+    "box = [160, 162, 2, 3]\n",
+    "\n",
+    "desitarget_path = '/global/homes/q/qmxp55/DESI/desitarget'\n",
+    "sweeps='/global/project/projectdirs/cosmo/data/legacysurvey/dr8/south'\n",
+    "targetsDir = '/global/homes/q/qmxp55/DESI/desitarget_data/targetdir'\n",
+    "\n",
+    "DR='8.0'\n",
+    "\n",
+    "labw = []\n",
+    "for i in box:\n",
+    "    labw.append(str(i))\n",
+    "    \n",
+    "targetFile = 'targets-dr%s-%s' %(DR, '_'.join(labw))\n",
+    "\n",
+    "#cmd0 = 'source /project/projectdirs/desi/software/desi_environment.sh 18.7'\n",
+    "cmd1 = 'export PATH=$PATH:%s/bin' %(desitarget_path)\n",
+    "cmd2 = 'export PYTHONPATH=$PYTHONPATH:%s/py' %(desitarget_path)\n",
+    "cmd3 = 'python %s/bin/select_targets %s/sweep/%s/ %s/%s.fits --tcnames BGS --radecbox %s' %(desitarget_path, sweeps, DR, targetsDir, targetFile, ','.join(labw))\n",
+    "\n",
+    "cmd = [cmd1, cmd2, cmd3]\n",
+    "\n",
+    "for i in cmd:\n",
+    "    \n",
+    "    print('RUNNING: '+i)\n",
+    "    err = subprocess.call(i.split(), shell=True)\n",
+    "    print(err)\n",
+    "    assert err == 0\n"
+   ]
   }
  ],
  "metadata": {
@@ -342,5 +416,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
